@@ -1,3 +1,8 @@
+2002-09-10  Andrew Cagney  <cagney@redhat.com>
+
+	* infcmd.c (default_print_registers_info): Send all output to
+	``file'' instead of ``gdb_stdout''.
+
 2002-09-10  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* event-loop.c (gdb_do_one_event): Make public.
